[package]
name = "rsWebRouter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"                             # Important! wgpu/Bevy needs this!
members = ["router", "eportfolio"]

[dependencies]
