[package]
name = "unchained_web"
version = "0.1.2"
edition = "2021"
authors = ["Carl Gützkow"]
description = "Simple router and template renderer."
repository = "https://github.com/cjgutz/unchained"
keywords = ["router", "templates"]
categories = ["web-programming::http-server"]
license = "MIT"
readme = "../README.md"

